tests/typechecker/should_fail/waitn_2.csp
Timed (\(_)@1) {}

P = WAIT(5)
